1-create-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment1
spec:
  selector:
    matchLabels:
      name: my-app1
  template:
    metadata:
      labels:
        name: my-app1
    spec:
      containers:
      - name: hello-world
        image: octavianwr/my-app-image
