2-create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod1
spec:
  containers:
    - name: hello-world
      image: adamstudiodocker/udemy-praktis-belajar-docker-dan-kubernetes-untuk-pemula:hello-world
