5-create-deployment-hello-world-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment3
spec:
  selector:
    matchLabels:
      name: my-app3
  template:
    metadata:
      labels:
        name: my-app3
    spec:
      containers:
        - name: hello-world-v2
          image: adamstudiodocker/udemy-praktis-belajar-docker-dan-kubernetes-untuk-pemula:hello-mariadb
