3-create-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
    name: my-app1
  ports:
    - port: 8080
      targetPort: 8080
